--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,954 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+  text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar-container {
+  width: 100%;
+  height: 100px;
+  background-color: rgb(111, 249, 101);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid gray;
+  position: sticky;
+  top: 0%;
+}
+
+.menu-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+}
+
+.logo {
+  padding: 36px 50px;
+}
+
+.logo > h2 {
+  color: black;
+  font-weight: bolder;
+}
+
+.nav-links {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-link > .link {
+  padding: 40px 60px;
+  font-weight: 500;
+  border-right: 1px solid gray;
+  border-left: 1px solid gray;
+  color: black;
+}
+
+.link:hover {
+  background-color: rgb(24, 242, 8);
+}
+
+.mobile-menu {
+  padding: 36px 50px;
+  display: none;
+}
+
+.firemail {
+  padding: 36px 40px;
+}
+
+.firemail > a {
+  color: black;
+  border-bottom: 2px dotted black;
+}
+
+@media screen and (max-width: 768px) {
+  .logo {
+    padding: 40px 0px;
+  }
+  .mobile-menu {
+    display: block;
+    padding: 40px 05px;
+  }
+
+  .firemail {
+    padding: 40px 10px;
+  }
+
+  .mobile-links {
+    position: absolute;
+    top: 100px;
+    left: 0%;
+    width: 100%;
+    height: fit-content;
+  }
+
+  .nav-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgb(89, 244, 78);
+  }
+
+  .nav-link > .link {
+    border-left: none;
+    border-right: none;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-bottom: 1px solid gray;
+  }
+  .nav-links {
+    display: none;
+  }
+}
+
+.home-container {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.info-container {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgb(89, 244, 78);
+}
+
+.info {
+  width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 20px;
+  margin: 70px 0px;
+}
+
+.info > button {
+  padding: 24px 60px;
+  background-color: rgb(89, 244, 78);
+  border: 1px solid black;
+  outline: none;
+  cursor: pointer;
+  transition: all 1s ease-in-out;
+}
+
+.info > button:hover {
+  background-color: black;
+  color: white;
+}
+.info-container > img {
+  width: 500px;
+  margin: 30px 0px;
+}
+
+@media screen and (max-width: 650px) {
+  .info-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .info-container > img {
+    width: 250px;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .info {
+    width: 96%;
+  }
+  .info > h1 {
+    font-size: 1.5rem;
+  }
+
+  .info > h2 {
+    font-size: 1.2rem;
+  }
+}
+
+.banner-container {
+  width: 100%;
+  height: fit-content;
+  background-image: url("https://i.ibb.co/L0TKcyL/pexels-olena-bohovyk-1772123.jpg");
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner {
+  width: 70%;
+  height: fit-content;
+  background-color: white;
+  margin: 40px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.banner > h2 {
+  color: rgb(89, 244, 78);
+  margin-top: 20px;
+}
+.banner > p {
+  line-height: 1.3;
+  text-overflow: ellipsis;
+  padding: 0px 150px;
+  font-size: 1.6rem;
+  font-weight: 200;
+}
+
+.banner > button {
+  padding: 20px 50px;
+  background-color: rgb(89, 244, 78);
+  cursor: pointer;
+  border: none;
+  outline: none;
+  margin-bottom: 20px;
+  border: 1px solid gray;
+}
+
+.banner > button:hover {
+  background-color: white;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 768px) {
+  .banner {
+    width: 95%;
+  }
+
+  .banner > p {
+    padding: 0px 30px;
+  }
+}
+
+.mid-container {
+  background-color: rgb(89, 244, 78);
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.mid-container > img {
+  height: 400px;
+  margin: 50px 20px;
+}
+
+.min-content {
+  width: 500px;
+  height: fit-content;
+  margin: 50px 20px;
+}
+
+.min-content > p {
+  font-size: 1.8rem;
+  line-height: 1.5;
+}
+
+@media screen and (max-width: 768px) {
+  .mid-container {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .mid-container > img {
+    width: 90%;
+  }
+
+  .min-content {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .min-content > p {
+    font-size: 1.3rem;
+  }
+}
+
+.footer-container {
+  width: 100%;
+  border-top: 1px solid gray;
+  padding: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(111, 249, 101);
+}
+
+.port {
+  width: 200px;
+  height: 200px;
+  background: pink;
+  left: 0%;
+  animation: nas 2s ease-in-out forwards;
+}
+
+.customer {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+}
+.customer > h1 {
+  margin: 20px;
+}
+
+.reviews {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.review-1,
+.review-2,
+.review-3,
+.review-4 {
+  width: 300px;
+  height: 200px;
+  background-color: rgb(89, 244, 78);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  transition: 1s ease;
+  margin: 50px 0px;
+}
+
+.review-1,
+.review-2,
+.review-3,
+.review-4 > p {
+  padding: 0px 10px;
+}
+
+.review-1:hover,
+.review-2:hover,
+.review-3:hover,
+.review-4:hover {
+  background-color: black;
+  color: white;
+}
+
+@media screen and (max-width: 768px) {
+  .customer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .reviews {
+    width: 100%;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+  }
+
+  .review-1,
+  .review-2,
+  .review-3,
+  .review-4 {
+    margin: 8px 0px;
+  }
+}
+
+.about-container {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.about-header {
+  width: 100%;
+  height: fit;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  background-color: rgb(89, 244, 78);
+}
+
+.about-header > h1 {
+  margin-top: 20px;
+  width: 90%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.about-header > p {
+  width: 90%;
+  font-size: 1.5rem;
+  margin-bottom: 30px;
+}
+
+.about-banner {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.about-content {
+  width: 80%;
+  height: fit-content;
+  margin: 50px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.sta-box {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.sta-box > h1 {
+  color: rgb(89, 244, 78);
+}
+.tech {
+  color: black;
+}
+.stacks {
+  width: 100%;
+  height: fit-content;
+  display: grid;
+  column-gap: 10px;
+  row-gap: 40px;
+  grid-template-columns: repeat(3, 2fr);
+}
+
+@media screen and (max-width: 768px) {
+  .stacks {
+    grid-template-columns: repeat(2, 3fr);
+    gap: 20px;
+  }
+}
+@media screen and (max-width: 650px) {
+  .stacks {
+    grid-template-columns: repeat(1, 3fr);
+    gap: 20px;
+  }
+}
+
+.html {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  width: 100%;
+  height: 200px;
+  flex-direction: column;
+  border-radius: 20px;
+  box-shadow: 1px 4px 11px 2px rgba(219, 75, 8, 1);
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(50, 54, 76, 1) 35%,
+    rgba(9, 46, 54, 0.8295912114845938) 50%
+  );
+  color: white;
+}
+
+.html > img,
+.css > img,
+.javas > img,
+.react > img,
+.github > img,
+.tail > img,
+.node > img,
+.expre > img,
+.mongo > img,
+.fire > img {
+  height: 100px;
+}
+
+.css {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  width: 100%;
+  height: 200px;
+  flex-direction: column;
+  border-radius: 20px;
+  box-shadow: 1px 5px 11px 2px rgba(8, 79, 219, 1);
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(50, 54, 76, 1) 35%,
+    rgba(9, 46, 54, 0.8295912114845938) 50%
+  );
+  color: white;
+}
+
+.javas {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  width: 100%;
+  height: 200px;
+  flex-direction: column;
+  border-radius: 20px;
+  box-shadow: 0px 6px 8px 3px rgba(222, 216, 48, 0.75);
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(50, 54, 76, 1) 35%,
+    rgba(9, 46, 54, 0.8295912114845938) 50%
+  );
+  color: white;
+}
+
+.react {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  width: 100%;
+  height: 200px;
+  flex-direction: column;
+  border-radius: 20px;
+  box-shadow: 0px 6px 8px 3px rgba(63, 126, 212, 0.75);
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(50, 54, 76, 1) 35%,
+    rgba(9, 46, 54, 0.8295912114845938) 50%
+  );
+  color: white;
+}
+
+.github {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  width: 100%;
+  height: 200px;
+  flex-direction: column;
+  border-radius: 20px;
+  box-shadow: 0px 6px 8px 3px rgba(217, 217, 209, 0.75);
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(50, 54, 76, 1) 35%,
+    rgba(9, 46, 54, 0.8295912114845938) 50%
+  );
+  color: white;
+}
+
+.tail {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  width: 100%;
+  height: 200px;
+  flex-direction: column;
+  border-radius: 20px;
+  box-shadow: 0px 6px 8px 3px rgba(39, 222, 222, 0.75);
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(50, 54, 76, 1) 35%,
+    rgba(9, 46, 54, 0.8295912114845938) 50%
+  );
+  color: white;
+}
+
+.node {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  width: 100%;
+  height: 200px;
+  flex-direction: column;
+  border-radius: 20px;
+  box-shadow: 0px 4px 8px 3px rgba(39, 222, 47, 0.75);
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(50, 54, 76, 1) 35%,
+    rgba(9, 46, 54, 0.8295912114845938) 50%
+  );
+  color: white;
+}
+
+.expre {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  width: 100%;
+  height: 200px;
+  flex-direction: column;
+  border-radius: 20px;
+  box-shadow: 0px 4px 8px 3px rgba(191, 39, 222, 0.75);
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(50, 54, 76, 1) 35%,
+    rgba(9, 46, 54, 0.8295912114845938) 50%
+  );
+  color: white;
+}
+
+.mongo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+  height: 200px;
+  flex-direction: column;
+  border-radius: 20px;
+  box-shadow: 0px 4px 8px 3px rgba(39, 222, 47, 0.75);
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(50, 54, 76, 1) 35%,
+    rgba(9, 46, 54, 0.8295912114845938) 50%
+  );
+  color: white;
+}
+
+.fire {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+  height: 200px;
+  flex-direction: column;
+  border-radius: 20px;
+  box-shadow: 0px 6px 8px 3px rgba(222, 216, 48, 0.75);
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(50, 54, 76, 1) 35%,
+    rgba(9, 46, 54, 0.8295912114845938) 50%
+  );
+  color: white;
+}
+
+.contact-container {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.map-container {
+  width: 90%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.map-container > h1 {
+  margin-top: 20px;
+}
+iframe {
+  margin-bottom: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  iframe {
+    width: 100%;
+    height: 400px;
+  }
+}
+
+.form-container {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 70px 0px;
+}
+
+form {
+  width: 800px;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.social-container {
+  width: 300px;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.social-container > h3 {
+  color: gray;
+}
+textarea {
+  width: 100%;
+  border: 1px solid gray;
+  outline: none;
+  padding: 10px;
+}
+
+.input {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+}
+
+.input > input {
+  width: 50%;
+  height: 40px;
+  border: 1px solid gray;
+  outline: none;
+  padding: 10px;
+}
+
+form > input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid gray;
+  outline: none;
+  padding: 10px;
+}
+
+form > button {
+  padding: 20px 60px;
+  background-color: white;
+  border: 1px solid rgb(89, 244, 78);
+  color: rgb(89, 244, 78);
+  transition: 1s ease;
+  cursor: pointer;
+}
+
+form > button:hover {
+  background-color: rgb(89, 244, 78);
+  color: white;
+}
+
+@media screen and (max-width: 768px) {
+  .form-container {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  form {
+    width: 95%;
+  }
+
+  .social-container {
+    width: 90%;
+    margin-top: 30px;
+  }
+}
+
+.addre,
+.phone,
+.mail {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.addre > h5,
+.phone > h5,
+.mail > h5 {
+  color: gray;
+}
+.same {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+}
+
+.same > .fa-solid {
+  color: gray;
+}
+
+.same > a {
+  color: black;
+}
+
+.app {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 40px;
+}
+
+.whats {
+  height: 30px;
+  border-radius: 50%;
+  box-shadow: 1px 1px 8px 8px rgba(8, 228, 103, 0.75);
+}
+
+.face {
+  height: 30px;
+  border-radius: 50%;
+  box-shadow: 1px 1px 8px 8px rgba(8, 89, 228, 0.75);
+}
+
+.insta {
+  height: 30px;
+  border-radius: 50%;
+  box-shadow: 1px 1px 8px 8px rgba(218, 8, 228, 0.75);
+}
+
+.twitt {
+  height: 30px;
+  border-radius: 50%;
+  box-shadow: 1px 1px 8px 8px rgba(59, 112, 223, 0.75);
+}
+
+.port-container {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.port-header {
+  width: 80%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  gap: 20px;
+  flex-direction: column;
+}
+
+.port-header > h1 {
+  margin-top: 20px;
+}
+
+.recent-works-container {
+  width: 80%;
+  height: fit-content;
+  margin: 30px 0px;
+  display: grid;
+  grid-template-columns: repeat(3, 2fr);
+  column-gap: 20px;
+  row-gap: 20px;
+}
+
+.recent-1,
+.recent-2,
+.recent-3,
+.recent-4,
+.recent-5,
+.recent-6 {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+  flex-direction: column;
+  border-radius: 15px;
+  box-shadow: -2px 0px 6px 5px rgba(172, 172, 172, 0.75);
+}
+
+.recent-1 > img,
+.recent-2 > img,
+.recent-3 > img,
+.recent-4 > img,
+.recent-5 > img,
+.recent-6 > img {
+  width: 100%;
+  height: 150px;
+}
+
+.recent-1 > a,
+.recent-2 > a,
+.recent-3 > a,
+.recent-4 > a,
+.recent-5 > a,
+.recent-6 > a {
+  color: rgb(89, 244, 78);
+}
+
+@media screen and (max-width: 768px) {
+  .recent-works-container {
+    grid-template-columns: repeat(2, 3fr);
+  }
+}
+@media screen and (max-width: 650px) {
+  .recent-works-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
