--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,11 @@
   text-decoration: none;
 }
 
+
 .navbar-container {
   width: 100%;
   height: 100px;
-  background-color: rgb(111, 249, 101);
+  background-color: rgb(237, 237, 237);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -46,10 +47,12 @@
   border-right: 1px solid gray;
   border-left: 1px solid gray;
   color: black;
+  transition: all 1s ease;
 }
 
 .link:hover {
-  background-color: rgb(24, 242, 8);
+  background-color: rgb(166, 166, 166);
+  color: white;
 }
 
 .mobile-menu {
@@ -92,7 +95,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: rgb(89, 244, 78);
+    background-color: rgb(237, 237, 237);
   }
 
   .nav-link > .link {
@@ -125,7 +128,6 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: rgb(89, 244, 78);
 }
 
 .info {
@@ -140,8 +142,8 @@
 
 .info > button {
   padding: 24px 60px;
-  background-color: rgb(89, 244, 78);
-  border: 1px solid black;
+  background-color: rgb(237, 237, 237);
+  border: 1px solid gray;
   color: black;
   outline: none;
   cursor: pointer;
@@ -149,7 +151,7 @@
 }
 
 .info > button:hover {
-  background-color: black;
+  background-color: rgb(57, 57, 57);
   color: white;
 }
 .info-container > img {
@@ -206,7 +208,7 @@
 }
 
 .banner > h2 {
-  color: rgb(89, 244, 78);
+  color: rgb(166, 166, 166);
   margin-top: 20px;
 }
 .banner > p {
@@ -219,18 +221,20 @@
 
 .banner > button {
   padding: 20px 50px;
-  background-color: rgb(89, 244, 78);
+  background-color: rgb(237, 237, 237);
   cursor: pointer;
   border: none;
   outline: none;
   margin-bottom: 20px;
   border: 1px solid gray;
   color: black;
+  transition: 1s ease;
 }
 
 .banner > button:hover {
-  background-color: white;
-  border: 1px solid black;
+  border: 1px solid gray;
+  background-color: rgb(57, 57, 57);
+  color: white;
 }
 
 @media screen and (max-width: 768px) {
@@ -256,7 +260,8 @@
 }
 
 .mid-container {
-  background-color: rgb(89, 244, 78);
+  background-image: url("https://i.ibb.co/YjDn70c/pexels-karol-d-841228.jpg");
+  background-size: cover;
   width: 100%;
   height: fit-content;
   display: flex;
@@ -278,6 +283,7 @@
 .min-content > p {
   font-size: 1.8rem;
   line-height: 1.5;
+  color: white;
 }
 
 @media screen and (max-width: 768px) {
@@ -308,7 +314,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(111, 249, 101);
+  background-color: rgb(237, 237, 237);
 }
 
 .port {
@@ -347,7 +353,7 @@
 .review-4 {
   width: 300px;
   height: 200px;
-  background-color: rgb(89, 244, 78);
+  box-shadow: 0px 1px 9px 6px rgba(148,139,139,0.75);
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -363,13 +369,7 @@
   padding: 0px 10px;
 }
 
-.review-1:hover,
-.review-2:hover,
-.review-3:hover,
-.review-4:hover {
-  background-color: black;
-  color: white;
-}
+
 
 @media screen and (max-width: 768px) {
   .customer {
@@ -419,7 +419,7 @@
   align-items: center;
   flex-direction: column;
   gap: 20px;
-  background-color: rgb(89, 244, 78);
+  box-shadow: 0px 3px 5px 3px rgba(175, 172, 172, 0.75);
 }
 
 .about-header > h1 {
@@ -434,6 +434,7 @@
   width: 90%;
   font-size: 1.2rem;
   margin-bottom: 30px;
+  margin-top: 10px;
 }
 
 .about-banner {
@@ -466,7 +467,7 @@
 }
 
 .sta-box > h1 {
-  color: rgb(89, 244, 78);
+  color: black;
 }
 .tech {
   color: black;
@@ -804,15 +805,15 @@ form > input {
 
 form > button {
   padding: 20px 60px;
-  background-color: white;
-  border: 1px solid rgb(89, 244, 78);
-  color: rgb(89, 244, 78);
+  background-color: rgb(237, 237, 237);
+  border: 1px solid gray;
+  color: black;
   transition: 1s ease;
   cursor: pointer;
 }
 
 form > button:hover {
-  background-color: rgb(89, 244, 78);
+  background-color: rgb(166, 166, 166);
   color: white;
 }
 
@@ -964,7 +965,7 @@ form > button:hover {
 .recent-4 > a,
 .recent-5 > a,
 .recent-6 > a {
-  color: rgb(89, 244, 78);
+  color: gray;
 }
 
 @media screen and (max-width: 768px) {
