--- a/src/index.css
+++ b/src/index.css
@@ -208,7 +208,8 @@
 }
 
 .banner > h2 {
-  color: rgb(166, 166, 166);
+  /* color: rgb(166, 166, 166); */
+  color: black;
   margin-top: 20px;
 }
 .banner > p {
@@ -217,6 +218,7 @@
   padding: 0px 150px;
   font-size: 1.6rem;
   font-weight: 200;
+  color: rgb(166, 166, 166);
 }
 
 .banner > button {
