--- a/src/index.css
+++ b/src/index.css
@@ -200,7 +200,7 @@
   width: 70%;
   height: fit-content;
   background-color: white;
-  margin: 40px 0px;
+  margin: 70px 0px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -310,11 +310,18 @@
 .footer-container {
   width: 100%;
   border-top: 1px solid gray;
-  padding: 50px;
+  padding: 0px 10px;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: rgb(237, 237, 237);
+}
+
+@media screen and (max-width:650px) {
+  .footer-container > p {
+    font-size: 0.7rem;
+  }
 }
 
 .port {
@@ -478,18 +485,18 @@
   display: grid;
   column-gap: 10px;
   row-gap: 40px;
-  grid-template-columns: repeat(3, 2fr);
+  grid-template-columns: repeat(5, 2fr);
 }
 
 @media screen and (max-width: 768px) {
   .stacks {
-    grid-template-columns: repeat(2, 3fr);
+    grid-template-columns: repeat(3, 3fr);
     gap: 20px;
   }
 }
 @media screen and (max-width: 650px) {
   .stacks {
-    grid-template-columns: repeat(1, 3fr);
+    grid-template-columns: repeat(2, 3fr);
     gap: 20px;
   }
 }
@@ -500,7 +507,7 @@
   align-items: center;
   gap: 30px;
   width: 100%;
-  height: 200px;
+  height: 150px;
   flex-direction: column;
   border-radius: 20px;
   box-shadow: 1px 4px 11px 2px rgba(219, 75, 8, 1);
@@ -524,7 +531,7 @@
 .expre > img,
 .mongo > img,
 .fire > img {
-  height: 100px;
+  height: 30px;
 }
 
 .css {
@@ -533,7 +540,7 @@
   align-items: center;
   gap: 30px;
   width: 100%;
-  height: 200px;
+  height: 150px;
   flex-direction: column;
   border-radius: 20px;
   box-shadow: 1px 5px 11px 2px rgba(8, 79, 219, 1);
@@ -553,7 +560,7 @@
   align-items: center;
   gap: 30px;
   width: 100%;
-  height: 200px;
+  height: 150px;
   flex-direction: column;
   border-radius: 20px;
   box-shadow: 0px 6px 8px 3px rgba(222, 216, 48, 0.75);
@@ -573,7 +580,7 @@
   align-items: center;
   gap: 30px;
   width: 100%;
-  height: 200px;
+  height: 150px;
   flex-direction: column;
   border-radius: 20px;
   box-shadow: 0px 6px 8px 3px rgba(63, 126, 212, 0.75);
@@ -593,7 +600,7 @@
   align-items: center;
   gap: 30px;
   width: 100%;
-  height: 200px;
+  height: 150px;
   flex-direction: column;
   border-radius: 20px;
   box-shadow: 0px 6px 8px 3px rgba(217, 217, 209, 0.75);
@@ -613,7 +620,7 @@
   align-items: center;
   gap: 30px;
   width: 100%;
-  height: 200px;
+  height: 150px;
   flex-direction: column;
   border-radius: 20px;
   box-shadow: 0px 6px 8px 3px rgba(39, 222, 222, 0.75);
@@ -633,7 +640,7 @@
   align-items: center;
   gap: 30px;
   width: 100%;
-  height: 200px;
+  height: 150px;
   flex-direction: column;
   border-radius: 20px;
   box-shadow: 0px 4px 8px 3px rgba(39, 222, 47, 0.75);
@@ -653,7 +660,7 @@
   align-items: center;
   gap: 30px;
   width: 100%;
-  height: 200px;
+  height: 150px;
   flex-direction: column;
   border-radius: 20px;
   box-shadow: 0px 4px 8px 3px rgba(191, 39, 222, 0.75);
@@ -673,7 +680,7 @@
   align-items: center;
   gap: 10px;
   width: 100%;
-  height: 200px;
+  height: 150px;
   flex-direction: column;
   border-radius: 20px;
   box-shadow: 0px 4px 8px 3px rgba(39, 222, 47, 0.75);
@@ -693,7 +700,7 @@
   align-items: center;
   gap: 10px;
   width: 100%;
-  height: 200px;
+  height: 150px;
   flex-direction: column;
   border-radius: 20px;
   box-shadow: 0px 6px 8px 3px rgba(222, 216, 48, 0.75);
