--- a/src/index.css
+++ b/src/index.css
@@ -311,16 +311,54 @@
   width: 100%;
   border-top: 1px solid gray;
   padding: 0px 10px;
-  height: 100px;
+  height: fit-content;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(237, 237, 237);
+  flex-direction: column;
+  gap: 40px;
+  background-color: rgb(22, 22, 22);
+  color: white;
+}
+.footer-container >  h2 {
+  margin-top: 20px;
+}
+
+.footer-container > p {
+  margin-bottom: 40px;
+  color: gray;
+}
+.footer-container > button {
+  padding: 10px 20px;
+  color: white;
+  background-color: rgb(22, 22, 22);
+  border: 1px solid white;
+  animation: nas 2s ease infinite;
+  position: relative;
+  cursor: pointer;
+}
+
+@keyframes nas {
+  0%{background-color: rgb(22, 22, 22); color: white;}
+  40%{background-color: rgb(57, 57, 57); color: gray;}
+  70%{background-color: white;color: black; border: 1px solid black;}
+}
+
+.footer-app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  margin-bottom: 30px;
 }
 
 @media screen and (max-width:650px) {
   .footer-container > p {
-    font-size: 0.7rem;
+    font-size: 0.8rem;
+  }
+
+  .footer-container > span {
+    padding: 0px 20px;
   }
 }
 
