--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@
   text-decoration: none;
 }
 
-
 .navbar-container {
   width: 100%;
   height: 100px;
@@ -149,6 +148,7 @@
   outline: none;
   cursor: pointer;
   transition: all 1s ease-in-out;
+  border-radius: 5px;
 }
 
 .info > button:hover {
@@ -229,6 +229,7 @@
   border: 1px solid gray;
   color: black;
   transition: 1s ease;
+  border-radius: 5px;
 }
 
 .banner > button:hover {
@@ -247,7 +248,7 @@
   }
 }
 
-@media screen and (max-width:650px) {
+@media screen and (max-width: 650px) {
   .banner > p {
     font-size: 1.1rem;
   }
@@ -255,8 +256,6 @@
   .min-content > p {
     font-size: 1.1rem;
   }
-
- 
 }
 
 .mid-container {
@@ -320,7 +319,7 @@
   background-color: rgb(22, 22, 22);
   color: white;
 }
-.footer-container >  h2 {
+.footer-container > h2 {
   margin-top: 20px;
 }
 
@@ -333,15 +332,22 @@
   color: white;
   background-color: rgb(22, 22, 22);
   border: 1px solid white;
-  animation: nas 2s ease infinite;
+  animation: nas 1s ease-in infinite;
   position: relative;
   cursor: pointer;
+  border-radius: 5px;
 }
 
 @keyframes nas {
-  0%{background-color: rgb(22, 22, 22); color: white;}
-  40%{background-color: rgb(57, 57, 57); color: gray;}
-  70%{background-color: white;color: black; border: 1px solid black;}
+  0% {
+    transform: scale(0.9, 0.9);
+  }
+  50% {
+    transform: scale(1, 1);
+  }
+  100% {
+    transform: scale(0.9, 0.9);
+  }
 }
 
 .footer-app {
@@ -352,7 +358,7 @@
   margin-bottom: 30px;
 }
 
-@media screen and (max-width:650px) {
+@media screen and (max-width: 650px) {
   .footer-container > p {
     font-size: 0.8rem;
   }
@@ -398,7 +404,7 @@
 .review-4 {
   width: 300px;
   height: 200px;
-  box-shadow: 0px 1px 9px 6px rgba(148,139,139,0.75);
+  box-shadow: 0px 1px 9px 6px rgba(148, 139, 139, 0.75);
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -413,8 +419,6 @@
 .review-4 > p {
   padding: 0px 10px;
 }
-
-
 
 @media screen and (max-width: 768px) {
   .customer {
@@ -438,7 +442,7 @@
   }
 }
 
-@media screen and (max-width:650px) {
+@media screen and (max-width: 650px) {
   .reviews {
     display: flex;
     flex-direction: column;
@@ -855,6 +859,7 @@ form > button {
   color: black;
   transition: 1s ease;
   cursor: pointer;
+  border-radius: 5px;
 }
 
 form > button:hover {
@@ -1023,4 +1028,3 @@ form > button:hover {
     grid-template-columns: repeat(1, 1fr);
   }
 }
-
