--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid gray;
   position: sticky;
   top: 0%;
   z-index: 100;
@@ -29,8 +28,10 @@
   padding: 36px 50px;
 }
 
+
+
 .logo > h2 {
-  color: black;
+  color: rgb(150, 213, 234);
   font-weight: bolder;
 }
 
@@ -44,8 +45,6 @@
 .nav-link > .link {
   padding: 40px 60px;
   font-weight: 500;
-  border-right: 1px solid gray;
-  border-left: 1px solid gray;
   color: black;
   transition: all 1s ease;
 }
@@ -140,6 +139,10 @@
   margin: 70px 0px;
 }
 
+.info > h1 {
+  color: rgb(150, 213, 234);
+}
+
 .info > button {
   padding: 24px 60px;
   background-color: rgb(237, 237, 237);
@@ -209,7 +212,7 @@
 }
 
 .banner > h2 {
-  color: black;
+  color: rgb(150, 213, 234);
   margin-top: 20px;
 }
 .banner > p {
@@ -368,13 +371,7 @@
   }
 }
 
-.port {
-  width: 200px;
-  height: 200px;
-  background: pink;
-  left: 0%;
-  animation: nas 2s ease-in-out forwards;
-}
+
 
 .customer {
   width: 100%;
@@ -387,6 +384,7 @@
 }
 .customer > h1 {
   margin: 20px;
+  color: rgb(150, 213, 234);
 }
 
 .reviews {
@@ -477,6 +475,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  color: rgb(150, 213, 234);
 }
 
 .about-header > p {
@@ -516,7 +515,7 @@
 }
 
 .sta-box > h1 {
-  color: black;
+  color: rgb(150, 213, 234);
 }
 .tech {
   color: black;
@@ -529,6 +528,7 @@
   row-gap: 40px;
   grid-template-columns: repeat(5, 2fr);
 }
+
 
 @media screen and (max-width: 768px) {
   .stacks {
@@ -777,6 +777,7 @@
 
 .map-container > h1 {
   margin-top: 20px;
+  color: rgb(150, 213, 234);
 }
 iframe {
   margin-bottom: 20px;
@@ -970,6 +971,7 @@ form > button:hover {
 
 .port-header > h1 {
   margin-top: 20px;
+  color: rgb(150, 213, 234);
 }
 
 .recent-works-container {
