--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,10 @@
 
 .firemail > a {
   color: black;
-  border-bottom: 2px dotted black;
+}
+
+.firemail >a:hover {
+  border-bottom: 2px solid black;
 }
 
 @media screen and (max-width: 768px) {
