--- a/src/index.css
+++ b/src/index.css
@@ -428,11 +428,17 @@
   margin: 50px 0px;
 }
 
-.review-1,
-.review-2,
-.review-3,
+.review-1 > p,
+.review-2 > p,
+.review-3 > p,
 .review-4 > p {
-  padding: 0px 10px;
+  padding: 5px 10px;
+}
+.review-1 > h3,
+.review-2 > h3,
+.review-3 > h3,
+.review-4 > h3 {
+  padding: 5px 0px;
 }
 
 @media screen and (max-width: 768px) {
