--- a/src/index.css
+++ b/src/index.css
@@ -418,7 +418,7 @@
 .review-3,
 .review-4 {
   width: 300px;
-  height: 200px;
+  height: fit-content;
   box-shadow: 0px 1px 9px 6px rgba(148, 139, 139, 0.75);
   display: flex;
   justify-content: space-around;
@@ -432,13 +432,13 @@
 .review-2 > p,
 .review-3 > p,
 .review-4 > p {
-  padding: 5px 10px;
+  padding: 10px 10px;
 }
 .review-1 > h3,
 .review-2 > h3,
 .review-3 > h3,
 .review-4 > h3 {
-  padding: 5px 0px;
+  padding: 10px 0px;
 }
 
 @media screen and (max-width: 768px) {
