--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   padding: 0%;
   box-sizing: border-box;
   text-decoration: none;
+  
 }
 
 
@@ -132,6 +133,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  margin: 0px 10px;
 }
 
 .info {
