--- a/src/index.css
+++ b/src/index.css
@@ -868,7 +868,7 @@ form > h3 {
 }
 
 .social-container {
-  width: 300px;
+  width: 400px;
   height: fit-content;
   display: flex;
   justify-content: center;
@@ -978,35 +978,61 @@ form > button:hover {
 
 .app {
   width: 100%;
-  height: 60px;
+  height: fit-content;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  gap: 40px;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 .whats {
   height: 30px;
   border-radius: 50%;
-  box-shadow: 1px 1px 8px 8px rgba(8, 228, 103, 0.75);
+  box-shadow: 0px 0px 0px 5px rgb(23,157,13);
 }
 
 .face {
   height: 30px;
   border-radius: 50%;
-  box-shadow: 1px 1px 8px 8px rgba(8, 89, 228, 0.75);
+  box-shadow: 0px 0px 0px 5px rgb(60,88,153);
 }
 
 .insta {
   height: 30px;
   border-radius: 50%;
-  box-shadow: 1px 1px 8px 8px rgba(218, 8, 228, 0.75);
+  box-shadow: 0px 0px 0px 5px rgb(229,86,236);
 }
 
 .twitt {
   height: 30px;
   border-radius: 50%;
-  box-shadow: 1px 1px 8px 8px rgba(59, 112, 223, 0.75);
+  box-shadow: 0px 0px 0px 5px rgb(27,160,241);
+}
+.git {
+  height: 30px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 0px 5px rgba(0,0,0,0.75);
+}
+
+.linkedin {
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 0px 5px rgb(23,129,186);
+
+}
+
+@media screen and (max-width:330px) {
+  .whats,
+  .face,
+  .twitt,
+  .insta,
+  .git,
+  .linkedin {
+    height: 20px;
+    width: 20px;
+  }
 }
 
 .port-container {
@@ -1049,7 +1075,8 @@ form > button:hover {
 .recent-4,
 .recent-5,
 .recent-6,
-.recent-7 {
+.recent-7,
+.recent-8 {
   width: 100%;
   height: 200px;
   display: flex;
@@ -1067,7 +1094,8 @@ form > button:hover {
 .recent-4 > img,
 .recent-5 > img,
 .recent-6 > img,
-.recent-7 > img {
+.recent-7 > img,
+.recent-8 > img {
   width: 100%;
   height: 150px;
 }
@@ -1078,7 +1106,8 @@ form > button:hover {
 .recent-4 > a,
 .recent-5 > a,
 .recent-6 > a,
-.recent-7 > a {
+.recent-7 > a,
+.recent-8 > a {
   color: rgba(9, 46, 54, 0.8295912114845938);
 }
 
